testando commit do diretório principal em uma mudança no submodulo

--- a/des/appsettings.json
+++ b/des/appsettings.json
@@ -2,6 +2,9 @@
   "SystemStore": {
     "path": ""
   },
+  {
+    "runOnstart": false
+  }
   "Logging": {
     "LogLevel": {
       "Default": "Information",
