update local appsettings

--- a/local/appsettings.json
+++ b/local/appsettings.json
@@ -3,6 +3,9 @@
     "path": ""
   },
   "runOnstart": false,
+  "BACK_OFFICE": {
+    "PAGAMENTO":  "HTTP://"
+  }
   "Logging": {
     "LogLevel": {
       "Default": "Information",
